@@ -1,3 +1,7 @@
+2010-10-06	The InnoDB Team
+	* row/row0mysql.c, innodb_bug57255.result, innodb_bug57255.test
+	Fix Bug #Cascade Delete results in "Got error -1 from storage engine"
+ 
 2010-09-27	The InnoDB Team
 
 	* row/row0sel.c, innodb_bug56716.result, innodb_bug56716.test:
